<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="input_amount">Input amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="number_of_people">Number of People</string>
    <string name="no_svs">No SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="svs">svs</string>
    <string name="no_gst">no GST</string>
</resources>